crates/rig-derive/tests/ui/tool_args/fail_required_unknown_param.stderr
error: `qurey` does not match any parameter of `search`
 --> tests/ui/tool_args/fail_required_unknown_param.rs:5:21
  |
5 | #[rig_tool(required(qurey))]
  |                     ^^^^^
